--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -9,5 +9,10 @@
     <string name="button_message">单选按钮</string>
     <string name="checkbox_message">复选框</string>
     <string name="switch_message">这是做什么的？</string>
+    <string name="login_button_text">登录!</string>
+    <string name="dialog_message">你要结束该活动吗?</string>
+    <string name="dialog_title">选择</string>
+    <string name="ok">是的</string>
+    <string name="cancel">取消</string>
 
 </resources>
