--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,8 +10,13 @@
     <string name="switch_message">What does this do?</string>
     <string name="login_button_text">Login!</string>
     <string name="dialog_message">Do you want to finish the activity?</string>
+
     <string name="dialog_title">Option</string>
     <string name="ok">OK</string>
-    <string name="cancel">CANCEL</string>
+    <string name="cancel">Cancel</string>
+
+    <string name="start_chat_button">Start Chat</string>
+    <string name="send_button">Send</string>
+
 
 </resources>
