--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -15,4 +15,7 @@
     <string name="ok">是的</string>
     <string name="cancel">取消</string>
 
+    <string name="start_chat_button">开始聊天</string>
+    <string name="send_button">发送</string>
+
 </resources>
